--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h3>I'm in the AppComponent</h3>
-<app-server></app-server>
-<app-servers></app-servers>
+<div class="container">
+  <div class="row">
+    <div class=""col-xs-12>
+      <h3>I'm in the AppComponent</h3>
+      <hr>
+      <app-server></app-server>
+      <app-servers></app-servers>
+    </div>
+  </div>
+
+</div>
