--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <h3>I'm in the AppComponent</h3>
       <hr>
       <app-server></app-server>
-      <app-servers></app-servers>
+      <div app-servers></div>
     </div>
   </div>
 
