--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="container">
+  <app-success-alert></app-success-alert>
+  <app-warning-alert></app-warning-alert>
   <div class="row">
-    <div class=""col-xs-12>
+    <div class="col-xs-12">
       <h3>I'm in the AppComponent</h3>
       <hr>
       <app-server></app-server>
