--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,1 +1,24 @@
-<p>servers works!</p>
+<label>Server Name</label>
+<input
+    type="text"
+    class="form-control"
+    (input)="onUpdateServerName($event)"
+>
+<p>{{this.serverName}}</p>
+<input
+    type="text"
+    class="form-control"
+    [(ngModel)]="serverName"
+>
+<p>{{this.serverName}}</p>
+<button
+    class="btn btn-primary"
+    [disabled]="!allowNewServer"
+    (click)="onCreateServer()"
+>
+    Add Server
+</button>
+<p [innerText]="allowNewServer"></p>
+<p>{{serverCreationStatus}}</p>
+<app-server></app-server>
+<app-server></app-server>
