ng attribute and directive

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -18,7 +18,16 @@
 >
     Add Server
 </button>
-<p [innerText]="allowNewServer"></p>
-<p>{{serverCreationStatus}}</p>
-<app-server></app-server>
-<app-server></app-server>
+<!-- <p [innerText]="allowNewServer"></p> -->
+<!-- <p>{{serverCreationStatus}}</p> -->
+
+<!-- * stands for structural directive because it changes our DOM structure -->
+<!-- <p *ngIf="serverCreated; else noServer">{{serverCreationStatus}}</p> -->
+<!-- <ng-template #noServer> -->
+    <!-- <p>No server was created!</p> -->
+<!-- </ng-template> -->
+
+<!-- <app-server></app-server>
+<app-server></app-server> -->
+
+<app-server *ngFor="let server of servers"></app-server>
